package lapr4.jobs4u.jobApplication.domain;


/**
 * The type Status type.
 */
public enum StatusType {

    WAITING,
    APPROVED,
    REJECTED
}
