@startuml
'https://plantuml.com/class-diagram

package "Candidate Aggregate"{
    class "«root»\n«entity»\nCandidate" as Candidate{

    }
    note as EmailCandidate
                  Identifire
                 end note


    class "Name" as Name {
        firstName
        lastName
    }

    class "«value object»\nPhoneNumber" as PhoneNumber{
    phoneNumber
    }

     class "«value object»\nE-Mail" as EMail{
     email
     }

}

package "JobApplication Aggregate"{
    class "«root»\n«entity»\nJobApplication" as JobApplication{
    }
    class Status{
    }
    class "«value object»\nCurriculum" as Curriculum{
    }
    class "«value object»\n«calculated»\nGrade" as Grade2{}
}
package "Job Opening Aggregate"{


    class "«root»\n«entity» \nJobOpening" as JobOpening{


    }
    class "«value object»\n«identifier»\nJobReference" as JobReference{
    }
}

JobOpening "1"->"1" JobReference : includes
EmailCandidate.EMail
Candidate "1"-->"1" EMail :identified by
PhoneNumber "1"<-"1" Candidate :has
Candidate"1" --> "1" Name : has
Candidate "1" <-- "1" JobApplication :refers to
JobOpening "1"<---"*"JobApplication : refers to

JobApplication --> Status
JobApplication --> "0..1" Grade2
JobApplication"1"-->"1" Curriculum : includes

@enduml